<resources>
    <string name="app_name">Calculadora</string>
    <string name="digite_um_numero">Digite um número</string>
    <string name="digite_o_segundo_numero">Digite outro número</string>
    <string name="somar">Somar</string>
    <string name="subtrair">Subtrair</string>
    <string name="multiplicar">Multiplicar</string>
    <string name="dividir">Dividir</string>
    <string name="calcular">Calcular</string>
</resources>