<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    android:background="@color/colorAccent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editText_primeiro_numero"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:inputType="numberDecimal"
        android:hint="@string/digite_um_numero"
        android:textColorHint="@color/colorPrimary"

        />

    <EditText
        android:id="@+id/editText_segundo_numero"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:inputType="numberDecimal"
        android:hint="@string/digite_o_segundo_numero"
        android:textColorHint="@color/colorPrimary"
        />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_somar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/somar"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="16dp"
            android:layout_gravity="center_vertical"
            />

        <Button
            android:id="@+id/button_subtrair"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_gravity="center_vertical"
            android:text="@string/subtrair"
            android:textColor="@color/colorPrimary"
            />

        <Button
            android:id="@+id/button_multiplicar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:layout_gravity="center_vertical"
            android:text="@string/multiplicar"
            android:textColor="@color/colorPrimary"
            />

        <Button
            android:id="@+id/button_dividir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:layout_gravity="center_vertical"
            android:text="@string/dividir"
            android:textColor="@color/colorPrimary"
            />

    </LinearLayout>

    <Button
        android:id="@+id/button_calcular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/calcular"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"/>

</LinearLayout>